--- a/Loading_and_Testing_Model.ipynb
+++ b/Loading_and_Testing_Model.ipynb
@@ -43,7 +43,7 @@
     "model = DeepfakeDetector().to(device)\n",
     "\n",
     "# Load saved weights\n",
-    "model.load_state_dict(torch.load(\"Sample_new_1.8L_deepfake_detector_linkedin.pth\", map_location=device))\n",
+    "model.load_state_dict(torch.load(\"PATH TO MODEL/Sample_new_1.8L_deepfake_detector_linkedin.pth\", map_location=device))\n",
     "model.eval()  # Set model to evaluation mode\n",
     "\n",
     "print(\"Model loaded successfully!\")\n"
@@ -86,7 +86,7 @@
     "    print(f\"Converted: {input_path} → {output_path}\")\n",
     "\n",
     "# Example usage\n",
-    "convert_to_jpg(\"/home/libra-03/Desktop/DL_Assignment/Testings/deep.jpg\")  # Change to your file path\n"
+    "convert_to_jpg(\"PATH TO INPUT IMAGE.jpg\")  # Change to your file path\n"
    ]
   },
   {
@@ -164,8 +164,8 @@
     "        shutil.copy(input_path, output_path)\n",
     "\n",
     "# Example usage\n",
-    "input_image_path = \"/home/libra-03/Desktop/DL_Assignment/Testing_Images/hardik_fake.jpg\"  # Replace with your input image path\n",
-    "output_image_path = \"/home/libra-03/Desktop/DL_Assignment/Testing_Images/hardik_fake_scaledup.jpg\"  # Replace with your output image path\n",
+    "input_image_path = \"PATH TO INPUT IMAGE.jpg\"  # Replace with your input image path\n",
+    "output_image_path = \"PATH TO INPUT IMAGE_scaledup.jpg\"  # Replace with your output image path\n",
     "\n",
     "process_image(input_image_path, output_image_path)\n"
    ]
@@ -210,8 +210,8 @@
     "    new_img.save(output_path)\n",
     "\n",
     "# Example usage\n",
-    "input_image_path = \"/home/libra-03/Desktop/DL_Assignment/Testing_Images/hardik_fake_scaledup.jpg\"  # Replace with your input image path\n",
-    "output_image_path = \"/home/libra-03/Desktop/DL_Assignment/Testing_Images/hardik_fake_scaleddown.jpg\"  # Replace with your output image path\n",
+    "input_image_path = \"PATH TO INPUT IMAGE_scaledup.jpg\"  # Replace with your input image path\n",
+    "output_image_path = \"PATH TO INPUT IMAGE_scaleddown.jpg\"  # Replace with your output image path\n",
     "\n",
     "downscale_image(input_image_path, output_image_path)\n"
    ]
@@ -252,7 +252,7 @@
     "    print(f\"Prediction Score: {output:.4f} ({'Fake' if output > 0.5 else 'Real'})\")\n",
     "\n",
     "# Example usage:\n",
-    "predict_image(model, \"/home/libra-03/Desktop/DL_Assignment/Testing_Images/thispersondoesnotexist.jpg\")\n"
+    "predict_image(model, \"PATH TO INPUT IMAGE_scaleddown.jpg\")\n"
    ]
   },
   {
@@ -303,7 +303,7 @@
     "# Load the Model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = DeepfakeDetector().to(device)\n",
-    "model.load_state_dict(torch.load(\"Sample_new_1.8L_deepfake_detector_linkedin.pth\", map_location=device))\n",
+    "model.load_state_dict(torch.load(\"PATH TO MODEL/Sample_new_1.8L_deepfake_detector_linkedin.pth\", map_location=device))\n",
     "model.eval()\n",
     "\n",
     "# Define Dataset Class\n",
@@ -341,7 +341,7 @@
     "])\n",
     "\n",
     "# Load Test Data\n",
-    "test_dataset = DeepfakeDataset(root_dir=\"/home/libra-03/Desktop/DL_Assignment/new_sample_1.8L/Test\", transform=transform)\n",
+    "test_dataset = DeepfakeDataset(root_dir=\"PATH TO TEST DATASET/Test\", transform=transform)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
    ]
   },
